# ranking_reverse_search

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.txt  p.txt  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: ruff-format.sh  run-matching-test.sh
.claude/skills/add-engine/: SKILL.md
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-14-ranking-reverse-search.md  2026-06-16-frame-picker-cropping-ux.md  2026-06-16-group-b-download-management.md  2026-06-16-imgbb-key-onboarding.md
docs/superpowers/specs/: 2026-06-14-ranking-reverse-search-design.md  2026-06-16-frame-picker-cropping-ux-design.md  2026-06-16-group-b-download-management-design.md  2026-06-16-imgbb-key-onboarding-design.md
scripts/: pack.py  rrs-pack  rrs-pack.sh  rrs-share  start-rrs-macos.command
src/rrs/: config.py  constants.py  main.py
src/rrs/pipeline/: download.py  frames.py  hosting.py  jobs.py  scenes.py  trim.py
src/rrs/pipeline/engines/: __init__.py  baidu.py  base.py  bing.py  google_lens.py  saucenao.py  sogou.py  stubs.py  tineye.py  yandex.py
src/rrs/store/: db.py  schema.sql
src/rrs/ui/: components.py  modals.py  onboarding.py  pages.py
src/rrs/ui/static/: app.css
src/rrs/ui/static/fonts/: README.md
tests/: conftest.py  test_config.py  test_db.py  test_download.py  test_engines_base.py  test_engines_registry.py  test_frames.py  test_hosting.py  test_jobs.py  test_main.py  test_modals.py  test_onboarding.py  test_pages_downloads.py  test_pages_poll.py  test_scenes.py  test_trim.py
