[project]
name = "rrs"
version = "0.1.0"
description = "Ranking reverse search — local NiceGUI tool"
requires-python = ">=3.11"
dependencies = [
  "nicegui>=2.0",
  "yt-dlp>=2024.1.1",
  "scenedetect[opencv]>=0.6.4",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
rrs = "rrs.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rrs = ["store/schema.sql", "ui/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
