[project]
name = "rrs"
version = "0.1.0"
description = "Ranking reverse search — local NiceGUI tool"
requires-python = ">=3.11"
dependencies = [
  # yt-dlp >= 2025.11.12 requires an external JS runtime (Deno, recommended) for
  # full YouTube support; the `default` extra bundles yt-dlp-ejs (the JS solver).
  "yt-dlp[default]>=2025.11.12",
  "nicegui>=2.0",
  "scenedetect[opencv]>=0.6.4",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.15",
]

[project.scripts]
rrs = "rrs.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rrs = ["store/schema.sql", "ui/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, flake8-bugbear, comprehensions
select = ["F", "E", "W", "I", "UP", "B", "C4"]
